# scout-apm-php-ext

./: .gitignore  .keep-a-changelog.ini  CHANGELOG.md  CMakeLists.txt  CREDITS  Dockerfile  README.md  benchmark.sh  config.m4  config.w32  example.php  full-clean.sh  package.xml  scout_curl_wrapper.c  scout_execute_ex.c  scout_execute_ex.h  scout_extern.h  scout_file_wrapper.c  scout_functions.c  scout_internal_handlers.c  scout_internal_handlers.h  scout_observer.c  scout_pdo_wrapper.c  scout_recording.c  scout_recording.h  scout_utils.c  winbuild.bat  zend_scoutapm.c  zend_scoutapm.h
.circleci/: config.yml
.github/: elasticsearch-8.yml
tests/: 001-check-ext-loaded.phpt  002-file_get_contents.phpt  003-scoutapm_get_calls-clears-calls-list.phpt  004-namespaced-fgc-is-not-logged.phpt  005-requiring-external-files-handled.phpt  006-anonymous-classes-handled.phpt  007-evaled-code-handled.phpt  008-class-with-no-constructor-call-handled.phpt  009-curl_exec.phpt  010-fwrite-fread-fopen.phpt  010-fwrite-fread-tmpfile.phpt  010-fwrite-fread.phpt  011-pdo-exec.phpt  011-pdo-query.phpt  011-pdostatement-execute-pdo-prepare.phpt  011-pdostatement-execute.phpt  012-file_put_contents.phpt  013-fix-memory-leak-when-scoutapm_get_calls-not-called.phpt  014-predis-support.phpt  015-phpredis-support.phpt  016-memcached-support.phpt  017-elastic-7-support.phpt  017-elastic-support.phpt  018-do-not-instrument-by-default.phpt  019-url-method-capture-fgc.phpt  020-url-method-capture-curl-post.phpt  020-url-method-capture-curl.phpt  021-url-method-capture-curl-customreq.phpt  bug-47.phpt  (+7 more)
(+12 files in other folders)
